feat: adiciona filtro por moeda em GET /cotacoes
